infras/oauth2-proxy/med.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth-proxy
  name: app-oauth2-proxy
  namespace: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    app: oauth-proxy
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "oauth-proxy"
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
      containers:
        - name: oauth-proxy
          image: "quay.io/oauth2-proxy/oauth2-proxy:latest"
          ports:
            - containerPort: 4180
          volumeMounts:
            - name: oauth2-proxy-config
              mountPath: /etc/oauth2-proxy.cfg
              subPath: oauth2-proxy.cfg
          args:
            - --config=/etc/oauth2-proxy.cfg
